--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,13 @@
-
-
+node_modules
+npm-debug.log
 **/Dockerfile
 **/.dockerignore
+
 **/docker-compose.yml
 **.env
 
-
 /.idea
-
-
+/dist
 **/.github
 .git
 .firebase
